clang/test/BSC/Positive/Method/Enum/enum_normal_top_level/enum_normal_top_level.cbs
// RUN: %clang_cc1 -verify %s
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: FileCheck --input-file=%t-rw.c %s
// RUN: %clang_cc1 %t-rw.c -o %t-rw.output
// expected-no-diagnostics

enum E {
    X3,
    X4
};

int getA(enum E this);


// CHECK: int getA(enum E this);

int main() {
  return 0;
}