clang/test/BSC/Negative/Method/Enum/enum_instance_function_multi_declaration/enum_instance_function_multi_declaration.cbs
// RUN: %clang_cc1 -verify %s
// expected-no-diagnostics

enum E {
    X3,
    X4
};

int enum E::getA(enum E* this);
int enum E::getA(enum E* this);

int main() {
  enum E foo = X3; 
  foo.getA();
  return 0;
}

int enum E::getA(enum E* this) { 
  return X4;
}